@@ -12,6 +12,8 @@ was causing a seg fault
 * Various fixes for the widgetgallery Ext Dialog example, and added a 
 'status=()' method to the event displayer
 * Added a text value to the WLineEdit inspect() and pp() methods
+* More tweaks to the widgetsgallery demo. Disable Ruby garbage collection for
+now until problems in coordinating GC with Wt are fixed.
 
 2009-01-23 Richard Dale <richard.j.dale@gmail.com>
 * Added the widgetgallery example, and amended the charts, dragdrop and 
